@@ -140,13 +140,13 @@ class Author(zeit.web.core.view_centerpage.AreaProvidingPaginationMixin,
     def same_as(self):
         links = []
         if self.context.facebook:
-            links.append('https://www.facebook.com/{}'.format(
+            links.append(u'https://www.facebook.com/{}'.format(
                 self.context.facebook))
         if self.context.twitter:
-            links.append('https://twitter.com/{}'.format(
+            links.append(u'https://twitter.com/{}'.format(
                 self.context.twitter.lstrip('@')))
         if self.context.instagram:
-            links.append('https://www.instagram.com/{}'.format(
+            links.append(u'https://www.instagram.com/{}'.format(
                 self.context.instagram))
         return links
 
