@@ -29,6 +29,8 @@ POSTDEPLOY
 
 - FIX: Serialize jinja `Undefined` to json as None
 
+- FIX: Handle non-ascii author facebook/twitter/etc values
+
 - MAINT: Add cached health check for elasticsearch to short-circuit requests
   when the server is already down
 
